migrate to spring boot 4